--- a/src/scss/partials/_vars.scss
+++ b/src/scss/partials/_vars.scss
@@ -17,6 +17,7 @@ $font-sizes: (
 $colours: (
     black: #000,
     red: #fd5454,
+    red-alt: #FF7676,
     green: #7bdb4c,
     petrol: #789199,
     grey: #555d60,
