--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,6 +8,8 @@ $header-padding-tablet: 30px;
     width: 100%;
     height: $header-height;
     padding-left: $header-padding;
+    position: relative;
+    z-index: 1;
 }
 
 .site-header__logo {
