--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -171,7 +171,9 @@ a {
   background: #000;
   width: 100%;
   height: 59.5px;
-  padding-left: 20px; }
+  padding-left: 20px;
+  position: relative;
+  z-index: 1; }
 
 .site-header__logo {
   color: #fff;
@@ -300,10 +302,7 @@ a {
 .hero {
   margin-top: -59.5px;
   padding-top: 59.5px;
-  height: 100%;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1; }
+  height: 100%; }
 
 .hero__slider {
   position: relative;
@@ -550,10 +549,7 @@ a {
   .pics__list {
     -webkit-columns: 2;
        -moz-columns: 2;
-            columns: 2;
-    -webkit-column-fill: auto;
-       -moz-column-fill: auto;
-            column-fill: auto; }
+            columns: 2; }
   .pic {
     -webkit-column-break-inside: avoid;
        page-break-inside: avoid;
@@ -631,10 +627,11 @@ a {
   background: #fff;
   height: 49px;
   width: 100%;
-  padding: 21px;
+  padding: 14px 21px;
   font-weight: 300;
   font-size: 17.5px;
-  border-radius: 0; }
+  border-radius: 0;
+  display: block; }
 
 .contact-form__input--textarea {
   height: 119px; }
@@ -649,7 +646,10 @@ a {
   color: #fff;
   line-height: 21px;
   margin: 0 auto;
-  display: block; }
+  display: block;
+  cursor: pointer; }
+  .contact-form__button:focus, .contact-form__button:hover {
+    background: #FF7676; }
 
 .form-message {
   background: rgba(0, 0, 0, 0.2);
