add active status to current page on nav

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -85,9 +85,9 @@
         font-size: font-size(small-alt);
         font-weight: 400;
         color: colour(lightgrey);
+    }
 
-        &:hover {
-            color: #fff;
-        }
+    .nav-item--active .nav-item__link {
+        color: #fff;
     }
 }
