--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -284,8 +284,8 @@ a {
     font-size: 17.5px;
     font-weight: 400;
     color: #8e8e8e; }
-    .nav-item__link:hover {
-      color: #fff; } }
+  .nav-item--active .nav-item__link {
+    color: #fff; } }
 
 .site-section--full {
   display: -webkit-box;
