--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -131,9 +131,6 @@ body {
 
 .site-content {
   width: 100%;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -142,7 +139,11 @@ body {
       -ms-flex-direction: column;
           flex-direction: column; }
   .site-content:empty {
-    background: #555d60; }
+    background: #555d60;
+    min-height: 100%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1; }
 
 img {
   display: block;
@@ -171,7 +172,7 @@ a {
   background: #000;
   width: 100%;
   height: 59.5px;
-  padding-left: 20px;
+  padding: 0 20px;
   position: relative;
   z-index: 1; }
 
@@ -192,13 +193,13 @@ a {
 @media (min-width: 768px) {
   .site-header {
     height: 80.5px;
-    padding-left: 30px; }
+    padding-left: 23px; }
   .site-header__logo {
     display: inline;
     width: auto;
-    margin-right: 30px; }
+    margin-right: 27px; }
     .site-header__logo .i {
-      font-size: 40px;
+      font-size: 47px;
       line-height: 80.5px; } }
 
 @-webkit-keyframes loading {
@@ -245,13 +246,13 @@ a {
   border-radius: 0;
   border: 0;
   background: none;
-  font-size: 44px;
+  font-size: 50px;
   color: #fff;
-  line-height: 59.5px;
+  line-height: 64px;
   vertical-align: middle;
   cursor: pointer;
   padding: 0;
-  margin-left: -10px; }
+  margin-left: -13px; }
   .site-nav__toggle:focus {
     outline: 0; }
 
@@ -279,7 +280,7 @@ a {
   .nav-item {
     display: inline;
     height: auto;
-    margin-right: 40px; }
+    margin-right: 37px; }
   .nav-item__link {
     font-size: 17.5px;
     font-weight: 400;
@@ -295,9 +296,7 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1; }
+  /*flex: 1;*/ }
 
 .hero {
   margin-top: -59.5px;
@@ -573,10 +572,7 @@ a {
 .contact {
   background: url(../imgs/feed-bg.jpg) no-repeat top center;
   background-size: cover;
-  padding: 59.5px 10px 98px 10px;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1; }
+  padding: 59.5px 10px 98px 10px; }
 
 .contact-form {
   max-width: 620px;
@@ -634,7 +630,8 @@ a {
   display: block; }
 
 .contact-form__input--textarea {
-  height: 119px; }
+  height: 119px;
+  overflow: auto; }
 
 .contact-form__button {
   background: #fd5454;
@@ -723,6 +720,8 @@ a {
     float: left;
     padding-right: 10px;
     width: 50%; }
+  .contact-form__fieldset--contact {
+    padding-right: 0; }
   .contact-form__inputs {
     margin: 0 0 42px 0; }
   .form-message {
