--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -23,12 +23,13 @@ body {
 
 .site-content {
     width: 100%;
-    flex: 1;
     display: flex;
     flex-direction: column;
 
     &:empty {
         background: colour(grey);
+        min-height: 100%;
+        flex: 1;
     }
 }
 
