--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -502,7 +502,7 @@ a {
     padding: 98px 0; } }
 
 .feed {
-  background: url(../imgs/feed-bg.jpg) no-repeat top center;
+  background: url(../imgs/feed-bg_2048.jpg) no-repeat top center;
   background-size: auto 100%;
   padding: 59.5px 22px; }
 
@@ -557,7 +557,8 @@ a {
 
 @media (min-width: 1024px) {
   .feed {
-    padding: 84px 42px; }
+    padding: 84px 42px;
+    background-image: url(../imgs/feed-bg_2880.jpg); }
   .pics__list {
     -webkit-columns: 3;
        -moz-columns: 3;
@@ -565,7 +566,8 @@ a {
 
 @media (min-width: 1440px) {
   .feed {
-    padding: 98px 42px; }
+    padding: 98px 42px;
+    background-image: url(../imgs/feed-bg.jpg); }
   .feed__header {
     margin-bottom: 49px; } }
 
